# ISIS

./: .gitignore  .gitmodules  AI.cpp  CMakeLists.txt  COM.cpp  CamInstance.cpp  Config.cpp  Dockerfile  ISIS.sh  Isis.cpp  README.md  Utility.cpp  VisionManager.cpp  isis.proto  isis_solver.proto  main.cpp  speech.cpp  trace.cpp
includes/: AI.h  Application.h  COM.h  CamInstance.h  Config.h  Isis.h  SingletonApplication.h  SyncQueue.h  Utility.h  VisionManager.h  autoencoder.h  speech.h  trace.h
libs/conf/caffe/: Makefile.config.cpu  Makefile.config.gpu  make_linux_compatible.rb  make_osx_compatible.rb
models/: caffe_reference_imagenet_model  imagenet_deploy.prototxt  isis.proto  synset_words.txt
ui/: mainwindow.cpp  pollerthread.cpp  resources.qrc
ui/includes/: AboutDialog.h  mainwindow.h  pollerthread.h
ui/layouts/: aboutDialog.ui  mainwindow.ui
